# burning-money

./: .gitignore  README.md  TODO.md  addresses.json  hardhat.config.js  package-lock.json  package.json
contracts/: TestERC20.sol  TestPriceOracle.sol  Token.sol  imports.sol
deploy/: ERC20Forwarder.js  External.js  FeeManager.js  Token.js  TrustedForwarder.js
docs/: presentation.odp  presentation2.odp  yellow-paper.doc  неразглашение.odt
frontend/: config.ts  index.html  index.tsx  package.json  tsconfig.json  webpack.config.js
frontend/src/: App.css  App.tsx  Bid.tsx  Card.tsx  KYC.js  KYC.tsx  Token.json  User.tsx  Withdraw.tsx  data.js  data.ts  deployed-addresses.json  index.css  index.tsx
frontend/src/components/: EthAddress.tsx  Interval24Hours.tsx  validators.ts
lib/: default-deployer.js
server/: .gitignore  Cargo.toml  config.toml  server.py
server/frontend/: index.html  package.json  pay.ts
server/frontend/src/: App.css  App.tsx  Bid.tsx  Card.tsx
server/migrations/2022-06-11-034206_payments/: down.sql  up.sql
server/migrations/2022-07-15-051941_users/: up.sql
server/migrations/2022-07-18-132458_txs/: TODO.md  down.sql  up.sql
server/migrations/2022-07-19-084330_lockfunds/: down.sql  up.sql
server/src/: async_db.rs  crypto.rs  errors.rs  kyc_sumsub.rs  main.rs  model_types.rs  models.rs  our_db_pool.rs  pages.rs  schema.rs  sql_types.rs  stripe.rs  user.rs
server/templates/: _base.html  _footer.html  about.html  error-internal.html  error-notfound.html  license.html
