[package]
name = "rtoken-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "migrate"

[dependencies]
actix-web = { version = "4.0.1", features = ["cookies"] }
tokio-postgres = "0.7.6"
tokio-postgres-migration = { git = "https://github.com/vporton/tokio-postgres-migration", version = "0.1.0" }
postgres-types = { version = "0.2.3", features = ["derive"] }
askama = { version = "0.11.1", features = ["with-actix-web"] }
askama_actix = "0.13.0"
env_logger = "0.9.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
clap = { version = "3.1.8", features = ["derive"] }
lambda-web = { version = "0.1.9", features=["actix4"] }
toml = "0.5.9"
actix-files = "0.6.0"
serde_json = "1.0.81"
ethers-core = "0.12.0"
lazy_static = "1.4.0"
reqwest = "0.11.11"
actix-cors = "0.6.1"
actix-session = { version = "0.7.0", features = ["cookie-session"] }
actix-identity = "0.5.1"
anyhow = { version = "1.0.58", features = ["backtrace"] }
thiserror = "1.0.31"
log = "0.4.17"
web3 = { git = "https://github.com/vporton/rust-web3", branch = "feature/80_bit_token" }
ethcontract = "0.17.0"
rustc-hex = "2.1.0"
chrono = "0.4.19"
rand = "0.6.5"
secp256k1 = { version = "0.21.3", features = ["rand"] }
tokio = { version = "1.20.0" }
#tracing = { version = "*", features = ["log-always"] }
futures = "0.3.21"
#tokio-scoped = "0.2.0"
async-trait = "0.1.56"
async-channel = "1.6.1"
tokio-interruptible-future = "8.2.0"